# SPLN

./: README.md
TPC1/: dicionario.json  dicionario.txt  gramatica.txt  medicina.txt  script.py
TPC2/: dic.json  output.xml  parser_yacc.py  script.py
TPC4/: output.txt  tokenizer.py
TPC5/: LICENSE  pyproject.toml
TPC5/tokenizer/: __init__.py
