[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tokenizer"
authors = [{name = "Júlio Gonçalves", email = "juliobeites@hotmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["spacy"]
readme = "README.md"

[project.scripts]
tok = "tokenizer:main"
